--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,7 +57,7 @@ jobs:
           go-version: 1.23
 
       - name: WriteGoList
-        run: go list -json -m all > go.list
+        run: go list -json -mod=vendor cmd/grpc_server/main.go > go.list
 
       - name: Nancy
         uses: sonatype-nexus-community/nancy-github-action@main
