--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,3 +62,28 @@ jobs:
       - name: Nancy
         uses: sonatype-nexus-community/nancy-github-action@main
         continue-on-error: true
+
+  build-and-push-docker-server:
+    name: runner / build-and-push-docker-server
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      
+      - name: Set up tag
+        id: vars
+        run: echo "sha_short=`echo ${GITHUB_SHA} | cut -c1-8`" >> $GITHUB_OUTPUT
+      
+      - uses: docker/setup-buildx-action@v3
+      
+      - uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      
+      - uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          tags: |
+            ${{ secrets.DOCKERHUB_USERNAME }}/vtb-api-2024-grpc:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/vtb-api-2024-grpc:${{ steps.vars.outputs.sha_short }}
