--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,6 +2,9 @@ name: CI
 on: 
   pull_request:
   workflow_dispatch:
+  push:
+    branches:
+      - master
   
 
 jobs:
@@ -64,6 +67,8 @@ jobs:
         continue-on-error: true
 
   build-and-push-docker-server:
+    needs: [golangci-lint, yamllint, hadolint, dotenv-linter, check-dependencies]
+    if: github.ref == 'refs/heads/master'
     name: runner / build-and-push-docker-server
     runs-on: ubuntu-latest
     steps:
