--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,7 +17,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
 
   app:
-    build: .
+    image: andytakker/vtb-api-2024-grpc:latest
     ports:
       - "$APP_GRPC_PORT:$APP_GRPC_PORT"
     depends_on:
