--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,6 +66,33 @@ jobs:
         uses: sonatype-nexus-community/nancy-github-action@main
         continue-on-error: true
 
+  test:
+    name: runner / test
+    runs-on: ubuntu-latest
+    container: golang:1.23-alpine
+    services:
+      db:
+        image: postgres:16-alpine
+        env:
+          TZ: UTC
+          POSTGRES_USER: testuser
+          POSTGRES_PASSWORD: testdb
+          POSTGRES_DB: testpass
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
+        with:
+          go-version: 1.23
+      - name: Test
+        run: go test -v ./...
+        env:
+          APP_DATABASE_DSN: postgres://testuser:testpass@db:5432/testdb?sslmode=disable
+
   build-and-push-docker-server:
     needs: [golangci-lint, yamllint, hadolint, dotenv-linter, check-dependencies]
     if: github.ref == 'refs/heads/master'
