--- a/.env.dev
+++ b/.env.dev
@@ -3,3 +3,10 @@ APP_GRPC_PORT=50051
 APP_TLS_CERT_FILE_PATH=
 APP_TLS_KEY_FILE_PATH=
 APP_TLS_CA_FILE_PATH=
+
+APP_ANTIVIRUS_ENABLE=false
+APP_ANTIVIRUS_ADDRESS=
+APP_ANTIVIRUS_TIMEOUT=
+APP_ANTIVIRUS_NETWORK=tcp
+
+APP_DATABASE_DSN=
