--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -117,5 +117,5 @@ jobs:
           context: .
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/vtb-api-2024-grpc:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/vtb-api-2024-grpc:${{ steps.vars.outputs.sha_short }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/vtb-api-2024-grpc-server:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/vtb-api-2024-grpc-server:${{ steps.vars.outputs.sha_short }}
