Add keycloack config

--- a/.env.dev
+++ b/.env.dev
@@ -13,3 +13,7 @@ APP_DATABASE_DSN=
 
 APP_CLIENT_PORT=8000
 
+APP_KEYCLOAK_ISSUER_URL=url
+APP_KEYCLOAK_CLIENT_ID=client_id
+APP_KEYCLOAK_CLIENT_SECRET=client_secret
+
