--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -42,8 +42,8 @@ services:
       grpc_server:
         condition: service_started
     environment:
-      - GRPC_SERVER_HOST=grpc_server
-      - GRPC_SERVER_PORT=${APP_GRPC_PORT:-50051}
+      - APP_GRPC_HOST=$APP_GRPC_HOST
+      - APP_GRPC_PORT=$APP_GRPC_PORT
 
 volumes:
   postgres_data:
