Update KC client and config

--- a/.env.dev
+++ b/.env.dev
@@ -13,7 +13,8 @@ APP_DATABASE_DSN=
 
 APP_CLIENT_PORT=8000
 
-APP_KEYCLOAK_ISSUER_URL=url
-APP_KEYCLOAK_CLIENT_ID=client_id
-APP_KEYCLOAK_CLIENT_SECRET=client_secret
-
+APP_KEYCLOAK_BASE_URL=http://127.0.0.1:8081/
+APP_KEYCLOAK_REALM=users
+APP_KEYCLOAK_CLIENT_ID=grpc_server
+APP_KEYCLOAK_ADMIN_USERNAME=admin
+APP_KEYCLOAK_ADMIN_PASSWORD=admin
