Add TLS FULLFILL EVER

--- a/.env.dev
+++ b/.env.dev
@@ -1,8 +1,13 @@
 APP_GRPC_HOST=127.0.0.1
 APP_GRPC_PORT=50051
-APP_TLS_CERT_FILE_PATH=
-APP_TLS_KEY_FILE_PATH=
-APP_TLS_CA_FILE_PATH=
+
+APP_TLS_SERVER_FILE_PATH=./certs/ca-cert.pem
+APP_TLS_SERVER_CERT_FILE_PATH=./certs/server-cert.pem
+APP_TLS_SERVER_KEY_FILE_PATH=./certs/server-key.pem
+
+APP_TLS_CLIENT_CA_FILE_PATH=/home/appuser/certs/ca-cert.pem
+APP_TLS_CLIENT_CERT_FILE_PATH=./certs/client-cert.pem
+APP_TLS_CLIENT_KEY_FILE_PATH=./certs/client-key.pem
 
 APP_ANTIVIRUS_ENABLE=false
 APP_ANTIVIRUS_ADDRESS=
@@ -13,8 +18,10 @@ APP_DATABASE_DSN=
 
 APP_CLIENT_PORT=8000
 
+APP_KEYCLOAK_ENABLE=true
 APP_KEYCLOAK_BASE_URL=http://127.0.0.1:8081/
 APP_KEYCLOAK_REALM=users
 APP_KEYCLOAK_CLIENT_ID=grpc_server
 APP_KEYCLOAK_ADMIN_USERNAME=admin
 APP_KEYCLOAK_ADMIN_PASSWORD=admin
+
