--- a/.env.prod
+++ b/.env.prod
@@ -5,8 +5,16 @@ POSTGRES_DB=testdb
 
 APP_GRPC_PORT=50051
 
-APP_TLS_CERT_FILE_PATH=
-APP_TLS_KEY_FILE_PATH=
-APP_TLS_CA_FILE_PATH=
+APP_TLS_CA_FILE_PATH=./certs/ca-cert.pem
+
+APP_TLS_SERVER_CERT_FILE_PATH=./certs/server-cert.pem
+APP_TLS_SERVER_KEY_FILE_PATH=./certs/server-key.pem
+
+APP_TLS_CLIENT_CERT_FILE_PATH=./certs/client-cert.pem
+APP_TLS_CLIENT_KEY_FILE_PATH=./certs/client-key.pem
 
 APP_CLIENT_PORT=8000
+
+APP_KEYCLOAK_ENABLE=true
+
+APP_KEYCLOAK_BASE_URL=
