--- a/.env.dev
+++ b/.env.dev
@@ -25,3 +25,6 @@ APP_KEYCLOAK_CLIENT_ID=grpc_server
 APP_KEYCLOAK_ADMIN_USERNAME=admin
 APP_KEYCLOAK_ADMIN_PASSWORD=admin
 
+APP_SENTRY_USE=true
+APP_SENTRY_ENVIRONMENT=production
+APP_SENTRY_DSN=
