--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -68,6 +68,10 @@ services:
       - APP_TLS_SERVER_CERT_FILE_PATH=$APP_TLS_SERVER_CERT_FILE_PATH
       - APP_TLS_SERVER_KEY_FILE_PATH=$APP_TLS_SERVER_KEY_FILE_PATH
 
+      - APP_SENTRY_USE=true
+      - APP_SENTRY_DSN={$APP_SENTRY_DSN?}
+      - APP_SENTRY_ENVIRONMENT=${APP_SENTRY_ENVIRONMENT?}
+
       - APP_DATABASE_DSN=postgres://${APP_POSTGRES_USER?}:${APP_POSTGRES_PASSWORD?}@db:5432/${APP_POSTGRES_DB?}?sslmode=disable
 
       - APP_KEYCLOAK_ENABLE=${APP_KEYCLOAK_ENABLE?}
