--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -69,7 +69,7 @@ services:
       - APP_TLS_SERVER_KEY_FILE_PATH=$APP_TLS_SERVER_KEY_FILE_PATH
 
       - APP_SENTRY_USE=true
-      - APP_SENTRY_DSN={$APP_SENTRY_DSN?}
+      - APP_SENTRY_DSN=${APP_SENTRY_DSN?}
       - APP_SENTRY_ENVIRONMENT=${APP_SENTRY_ENVIRONMENT?}
 
       - APP_DATABASE_DSN=postgres://${APP_POSTGRES_USER?}:${APP_POSTGRES_PASSWORD?}@db:5432/${APP_POSTGRES_DB?}?sslmode=disable
